WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307601
dataTransfer.types includes "Files" but dataTransfer.files is empty when dragging images from Mail.app
https://bugs.webkit.org/show_bug.cgi?id=307601
Summary
dataTransfer.types includes "Files" but dataTransfer.files is empty when drag...
joanne_pan2
Reported
2026-02-11 15:19:46 PST
Steps to reproduce: 1. Open an email in Mail.app that contains an inline image 2. Drag the inline image to a web page with a drop zone 3. In the drop event handler, check dataTransfer.types and dataTransfer.files Expected: If "Files" is in dataTransfer.types, dataTransfer.files should contain the file Actual: dataTransfer.types is ["Files", "text/html"], but dataTransfer.files.length is 0 Additional observations: - dataTransfer.items shows only 1 item with kind="string" (the HTML) - The HTML contains: <img src="blob:null/..." ...> which is inaccessible - Dragging from Notes.app works correctly (files are accessible) - This may be related to
Bug 217726
https://bugs.webkit.org/show_bug.cgi?id=217726
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-18 15:20:13 PST
<
rdar://problem/170672606
>
joanne_pan2
Comment 2
2026-05-05 16:51:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64312
EWS
Comment 3
2026-05-06 10:21:21 PDT
Committed
312711@main
(9a5dd61958c8): <
https://commits.webkit.org/312711@main
> Reviewed commits have been landed. Closing PR #64312 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug