dataTransfer.types includes "Files" but dataTransfer.files is empty when dragging images from Mail.app https://bugs.webkit.org/show_bug.cgi?id=307601 rdar://170672606

Reviewed by Ryosuke Niwa.

The problem: dataTransfer.files is empty when dragging an inline image
from the Mail app to a web page even though dataTransfer.types contains
the "Files" type. Mail puts both WebArchivePboardType and
NSFilesPromisePboardType on the pasteboard. The image data is only available
through the file promise, but WebKit skips file promise resolution whenever
WebArchive is present on the pasteboard.

The fix: The old code skipped file promise resolution whenever WebArchive
was on the pasteboard. Now it only skips when the drag came from the same
WebView (checked via DragApplicationFlags::IsSource). Mail.app is not the
same view, so its file promises get resolved.
Safari-to-Safari drags still use the WebArchive path since IsSource is true.

Tests: Tools/TestWebKitAPI/Helpers/cocoa/DragAndDropSimulator.h
       Tools/TestWebKitAPI/Helpers/mac/DragAndDropSimulatorMac.mm
       Tools/TestWebKitAPI/Tests/WebKit/WKWebView/mac/DragAndDropTestsMac.mm

* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::performDragOperation):
* Tools/TestWebKitAPI/Helpers/cocoa/DragAndDropSimulator.h:
* Tools/TestWebKitAPI/Helpers/mac/DragAndDropSimulatorMac.mm:
(-[DragAndDropSimulator writePromisedFilesWithWebArchive:]):
* Tools/TestWebKitAPI/Tests/WebKit/WKWebView/mac/DragAndDropTestsMac.mm:
(TEST(DragAndDropTests, DragPromisedImageFileWithWebArchiveIntoFileUpload)):

Canonical link: https://commits.webkit.org/312711@main